# word-utils

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ruff.yml
docs/plans/: 2026-01-05-gemini-ocr-design.md  2026-01-05-gemini-ocr-implementation.md  2026-01-05-max-images-design.md  2026-01-05-word-ocr-design.md  2026-01-05-word-ocr-implementation.md
src/word_ocr/: __init__.py  cli.py  extractor.py  ocr.py  processor.py  renderer.py
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_integration.py  test_ocr.py  test_processor.py  test_renderer.py
